# holtztabs

./: .gitignore  Dockerfile  README.md  conductor.json  fly.toml  pyproject.toml
freetar/: backend.py
freetar/static/: custom.js
freetar/templates/: about.html  base.html  index.html  tab.html
