[tool.poetry]
name = "holtztabs"
version = "0.15.0"
description = "An open source alternative front-end to ultimate-guitar.com"
authors = ["Charlie Holtz <charlie@charlieholtz.com>"]
readme = "README.md"
repository = "https://github.com/cbh123/holtztabs"
homepage = "https://github.com/cbh123/holtztabs"


[tool.poetry.dependencies]
python = "^3.9"
requests = {extras = ["socks"], version = "^2.32.3"}
beautifulsoup4 = "^4.12.0"
flask = "^3.0.30"
waitress = "^3.0.2"
flask-minify = "^0.50"
flask-caching = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
holtztabs = 'freetar.backend:main'
